allow repeated calls

--- a/manifest.json
+++ b/manifest.json
@@ -6,13 +6,13 @@
     "icons": {
         "48": "icon-48.png"
     },
-    "permissions" : ["activeTab"],
-    "content_scripts": [ 
+    "content_scripts": [
         {
-            "matches" : ["*://*.mozilla.org/*"],
+            "matches": ["*://*/*"],
             "js": ["faster-vid.js"]
         }
     ],
+    "permissions" : ["activeTab"],
     "background" : {
         "scripts" : ["background.js"]
     },
